[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprite/Ghost/Ghost1/Ghost2_2.png" type="Texture" id=1]
[ext_resource path="res://Sprite/Ghost/Ghost1/Ghost2_1.png" type="Texture" id=2]
[ext_resource path="res://script/ghost/GhostL.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=4]
radius = 104.005

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 13.25, 25.25 )

[node name="GhostL" type="KinematicBody2D" groups=["Damageable"]]
scale = Vector2( 2, 2 )
collision_layer = 5
collision_mask = 5
script = ExtResource( 3 )

[node name="ghostL_collision" type="Area2D" parent="."]
collision_layer = 37
collision_mask = 37

[node name="CollisionShape2D" type="CollisionShape2D" parent="ghostL_collision"]
shape = SubResource( 4 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.25, 1.25 )
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="bullet" type="Node2D" parent="."]

[connection signal="body_entered" from="ghostL_collision" to="." method="_on_ghostL_collision_body_entered"]
[connection signal="body_exited" from="ghostL_collision" to="." method="_on_ghostL_collision_body_exited"]
